tests/rascal/negative/parse_errors/L2/for-reserved.ob
MODULE Bla;

BEGIN
  x := FOR
END Bla.